Fixed stretching content on devices lower than 400px

--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -10,7 +10,7 @@
 
 .textContainer {
   text-align: center;
-  width: 25rem;
+  max-width: 25rem;
 }
 
 .headphonesEmoji {
